--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-react": "^7.18.6",
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "react-styleguidist": "^13.0.0"
+    "postcss": "^8.4.18",
+    "react-styleguidist": "^13.0.0",
+    "tailwindcss": "^3.2.1"
   }
 }
