--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "recharts": "^2.1.16",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1"
   },
