Json structure formed and UI Dashbprad components fixed

--- a/AgProjectData.json
+++ b/AgProjectData.json
@@ -1,88 +1,92 @@
 {
-    "tit" : {
-        "versificationData":[],
-        "months":{
-        "jan": {
-            "validated": 20,
-            "inprogress": 20,
-            "pending": 20,
+    "version" :"0.1.0",
+    "projects":{
+        "projectName1":{
+            "books":{
+                "tit" : {
+                    "totalVerses":[16,15,15],
+                    "spellingErrors":[5,6,4],
+                    "usfmTagErrors":[2,4,4],
+                    "suspiciousWhitespaces":[2,3,5],
+                    "emptyVerses":[2,3,4],
+                    "months":{
+                        "jan": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "feb": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "mar": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "apr": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "may": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "jun": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "jul": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "aug": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "sep": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        },
+                        "oct": {
+                            "validated": [8,5,0],
+                            "inprogress": [6,2,0],
+                            "pending": [2,8,15],
+                            "TotalHours": [3,4,0]
+                        },
+                        "nov": {
+                            "validated": [4,2,5],
+                            "inprogress": [2,0,2],
+                            "pending": [2,8,8],
+                            "TotalHours": [4,4,5]
+                        },
+                        "dec": {
+                            "validated": [0,0,0],
+                            "inprogress": [0,0,0],
+                            "pending": [0,0,0],
+                            "TotalHours": [0,0,0]
+                        }
+                    }
+                }
+            }
 
-            "TotalHours": 8,
-            "rate of transaltion":"calculate from total hourse spend , finished work verse/hour per month",
-            "estimated date ":"calculate from rate of transltion of last 3 months",
-            "spellchek":"data from Ag spell checker",
-            "USFM Error":"Data from Ag",
-            "White Spacing":"Data from Ag",
-            "remaining verses":"calculate from total verse - completed verses by month (versification data)",
-            "remaining chapters":"?"
-
-        },
-        "feb": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "mar": {
-            "validated": 40,
-            "inprogress": 40,
-            "pending": 10,
-            "TotalHours": 10
-        },
-        "apr": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "may": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "Jun": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "Jul": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "aug": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "sep": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "oct": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "nov": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
-        },
-        "dec": {
-            "validated": 50,
-            "inprogress": 30,
-            "pending": 20,
-            "TotalHours": 10
         }
     }
-    }
 }
+    
