--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "lodash": "^4.17.21",
     "next": "12.3.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
