--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
     "react-styleguidist": "^13.0.0",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.1",
+    "webpack": "^5.75.0"
   }
 }
